[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revKimi"
version = "0.0.1"
authors = [
    {name = "old-dream321", email = "hzz123123@outlook.com"}
]
description = "kimi逆向api"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/old-dream321/revKimi"